# rzo-textfile-cli

./: .gitignore  README.md  main.py  pyproject.toml
textfile/: TextFile.py  TextFileCli.py  __init__.py
