[build-system]
requires = ["setuptools>=57.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rzo-textfile-cli"
version = "0.0.2"
description = "A simple CLI and associated libraries to parse text files."
readme = {file = "README.md", content-type="text/markdown"}
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "renzoca" },
]
keywords = [
    "textfiles"
]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy==1.25.2"
]

[project.urls]
Repository = "https://github.com/renz0ca/rzo-textfile-cli"

[project.scripts]
textfile = "textfile:__main__"
